fixed dark mode for goofy colorspaces

--- a/themes/dark.css
+++ b/themes/dark.css
@@ -9,12 +9,12 @@
   color-scheme: dark;
   --ohno: #ff6666;
   --ohnoAlt: #ff9999;
-  --yay: #45E6BD;
-  --yayAlt: #A6FFE9;
-  --main: #A666FF;
-  --mainAlt: #C499FF;
-  --extra: #45E6BD;
-  --extraAlt: #A6FFE9;
+  --yay: #66FFCC;
+  --yayAlt: #CCFFEE;
+  --main: #9966FF;
+  --mainAlt: #BB99FF;
+  --extra: #66FFCC;
+  --extraAlt: #CCFFEE;
   --extraBg: #181825;
   --fg2: #c3cce9;
   --fg1: #c3cce9;
